# Lab2

./: CMakeLists.txt  Doxyfile  Lab2.c  test
html/: CMakeLists_8txt.html  Lab2_8c.html  Lab2_8c__incl.map  Lab2_8c__incl.md5  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
latex/: Lab2_8c.tex  Lab2_8c__incl.md5  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
